--- a/src/SmartMvvm.Xaml.Sample/GeneralView.xaml
+++ b/src/SmartMvvm.Xaml.Sample/GeneralView.xaml
@@ -38,7 +38,7 @@
                                             {Use Height}},
                                       Then='Width is less than Height',
                                       Else='Width is greater than Height'}}" />
-        <TextBlock Text="{Format Alltogether: {0} pixels.,
+        <TextBlock Text="{Format Altogether: {0} pixels.,
                                  {Calc 'x * y',
                                        {Use Width},
                                        {Use Height}}}" />
