feat: Simplify XAML

--- a/src/SmartMvvm.Xaml.Sample/GeneralView.xaml
+++ b/src/SmartMvvm.Xaml.Sample/GeneralView.xaml
@@ -60,7 +60,7 @@
                       Visibility="{Equal {Binding ElementName=CheckBox, Path=IsChecked},
                                          {Bool False}}" />
         <Separator Margin="5" />
-        <TextBlock Text="{Format '{}Current date: {0:yyyy-MM-dd}',
+        <TextBlock Text="{Format 'Current date: {0:yyyy-MM-dd}',
                                  {x:Static system:DateTime.Now}}" />
     </StackPanel>
 </UserControl>
