feat: Simplify Avalonia
- no need for *Bind properties since Avalonia won't emit a parsing error when assigning a Binding to a property of type object unlike WPF

--- a/src/SmartMvvm.Avalonia.Xaml.Sample/CalculatorView.axaml
+++ b/src/SmartMvvm.Avalonia.Xaml.Sample/CalculatorView.axaml
@@ -52,8 +52,8 @@
                                  {Calc {Binding ElementName=NumberBoxX, Path=Text},
                                        {Binding ElementName=NumberBoxY, Path=Text},
                                        {Binding ElementName=NumberBoxZ, Path=Text},
-                                       ExpressionBind={Binding ElementName=ExpressionBox,
-                                                               Path=Text},
+                                       Expression={Binding ElementName=ExpressionBox,
+                                                           Path=Text},
                                        FallbackValue='Invalid expression'}}" />
     </StackPanel>
 </UserControl>
